k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: fizzbuzz-enterprise-computation-service
  namespace: fizzbuzz-enterprise
  annotations:
    service.beta.kubernetes.io/aws-load-balancer-type: "nlb"
    service.beta.kubernetes.io/aws-load-balancer-cross-zone-load-balancing-enabled: "true"
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: fizzbuzz-enterprise
    app.kubernetes.io/component: computation-engine
  ports:
    - name: computation-http
      protocol: TCP
      port: 8080
      targetPort: 8080
    - name: computation-metrics
      protocol: TCP
      port: 8081
      targetPort: 8081
    - name: computation-esb
      protocol: TCP
      port: 9092
      targetPort: 9092
      appProtocol: fizzbuzz-esb
